Closed Bug 1967887 Opened 7 months ago Closed 7 months ago

[clang 20] Perma /builds/worker/checkouts/gecko/js/src/jit-test/tests/asm.js/testExpressions.js:103:9 Error: Assertion failed: got 0, expected 1

Categories

(Core :: JavaScript Engine: JIT, defect, P5)

defect

Tracking

()

RESOLVED FIXED
140 Branch
Tracking Status
firefox140 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: glandium)

References

Details

(Keywords: assertion)

Attachments

(1 file)

Filed by: mh [at] glandium.org
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=508328724&repo=try
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/cMPNSSopR7KAPEyiwhW94w/runs/0/artifacts/public/logs/live_backing.log


[task 2025-05-15T04:04:30.634Z] INFO timed-out       : False
[task 2025-05-15T04:04:30.635Z] INFO stderr         2> /builds/worker/checkouts/gecko/js/src/jit-test/tests/asm.js/testExpressions.js:103:9 Error: Assertion failed: got 0, expected 1
[task 2025-05-15T04:04:30.635Z] INFO stderr         2> Stack:
[task 2025-05-15T04:04:30.636Z] INFO stderr         2> @/builds/worker/checkouts/gecko/js/src/jit-test/tests/asm.js/testExpressions.js:103:9
[task 2025-05-15T04:04:30.637Z] /builds/worker/checkouts/gecko/js/src/jit-test/tests/asm.js/testExpressions.js:103:9 Error: Assertion failed: got 0, expected 1
[task 2025-05-15T04:04:30.638Z] Stack:
[task 2025-05-15T04:04:30.638Z]   @/builds/worker/checkouts/gecko/js/src/jit-test/tests/asm.js/testExpressions.js:103:9
[task 2025-05-15T04:04:30.638Z] Exit code: 3
[task 2025-05-15T04:04:30.638Z] FAIL - asm.js/testExpressions.js
[task 2025-05-15T04:04:30.638Z] TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/asm.js/testExpressions.js | /builds/worker/checkouts/gecko/js/src/jit-test/tests/asm.js/testExpressions.js:103:9 Error: Assertion failed: got 0, expected 1 (code 3, args "--baseline-eager --write-protect-code=off") [0.1 s]
[task 2025-05-15T04:04:30.638Z] INFO exit-status     : 3
[task 2025-05-15T04:04:30.638Z] INFO timed-out       : False
[task 2025-05-15T04:04:30.639Z] INFO stderr         2> /builds/worker/checkouts/gecko/js/src/jit-test/tests/asm.js/testExpressions.js:103:9 Error: Assertion failed: got 0, expected 1
[task 2025-05-15T04:04:30.639Z] INFO stderr         2> Stack:
[task 2025-05-15T04:04:30.640Z] INFO stderr         2> @/builds/worker/checkouts/gecko/js/src/jit-test/tests/asm.js/testExpressions.js:103:9
[task 2025-05-15T04:04:30.716Z] /builds/worker/checkouts/gecko/js/src/jit-test/tests/asm.js/testExpressions.js:103:9 Error: Assertion failed: got 0, expected 1
[task 2025-05-15T04:04:30.717Z] Stack:
[task 2025-05-15T04:04:30.717Z]   @/builds/worker/checkouts/gecko/js/src/jit-test/tests/asm.js/testExpressions.js:103:9
[task 2025-05-15T04:04:30.718Z] Exit code: 3
[task 2025-05-15T04:04:30.718Z] FAIL - asm.js/testExpressions.js
[task 2025-05-15T04:04:30.719Z] TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/asm.js/testExpressions.js | /builds/worker/checkouts/gecko/js/src/jit-test/tests/asm.js/testExpressions.js:103:9 Error: Assertion failed: got 0, expected 1 (code 3, args "--blinterp-eager") [0.1 s]
[task 2025-05-15T04:04:30.719Z] INFO exit-status     : 3
[task 2025-05-15T04:04:30.720Z] INFO timed-out       : False
[task 2025-05-15T04:04:30.720Z] INFO stderr         2> /builds/worker/checkouts/gecko/js/src/jit-test/tests/asm.js/testExpressions.js:103:9 Error: Assertion failed: got 0, expected 1
[task 2025-05-15T04:04:30.721Z] INFO stderr         2> Stack:
[task 2025-05-15T04:04:30.721Z] INFO stderr         2> @/builds/worker/checkouts/gecko/js/src/jit-test/tests/asm.js/testExpressions.js:103:9
[task 2025-05-15T04:04:30.722Z] /builds/worker/checkouts/gecko/js/src/jit-test/tests/asm.js/testExpressions.js:103:9 Error: Assertion failed: got 0, expected 1
[task 2025-05-15T04:04:30.722Z] Stack:
[task 2025-05-15T04:04:30.723Z]   @/builds/worker/checkouts/gecko/js/src/jit-test/tests/asm.js/testExpressions.js:103:9
[task 2025-05-15T04:04:30.723Z] Exit code: 3
[task 2025-05-15T04:04:30.724Z] FAIL - asm.js/testExpressions.js
[task 2025-05-15T04:04:30.724Z] TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/asm.js/testExpressions.js | /builds/worker/checkouts/gecko/js/src/jit-test/tests/asm.js/testExpressions.js:103:9 Error: Assertion failed: got 0, expected 1 (code 3, args "--no-blinterp --no-baseline --no-ion --more-compartments") [0.1 s]
[task 2025-05-15T04:04:30.724Z] INFO exit-status     : 3
[task 2025-05-15T04:04:30.725Z] INFO timed-out       : False
[task 2025-05-15T04:04:30.725Z] INFO stderr         2> /builds/worker/checkouts/gecko/js/src/jit-test/tests/asm.js/testExpressions.js:103:9 Error: Assertion failed: got 0, expected 1
[task 2025-05-15T04:04:30.726Z] INFO stderr         2> Stack:
[task 2025-05-15T04:04:30.726Z] INFO stderr         2> @/builds/worker/checkouts/gecko/js/src/jit-test/tests/asm.js/testExpressions.js:103:9
Assignee: nobody → mh+mozilla
Blocks: clang-20
Pushed by mh@glandium.org: https://hg.mozilla.org/integration/autoland/rev/3314b8ee5e84 Avoid using signed integer arithmetic that can overflow. r=spidermonkey-reviewers,nbp
Status: NEW → RESOLVED
Closed: 7 months ago
Resolution: --- → FIXED
Target Milestone: --- → 140 Branch
QA Whiteboard: [qa-triage-done-c141/b140]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: