Bug 1967887 - Avoid using signed integer arithmetic that can overflow. r=spidermonkey-reviewers,nbp

Differential Revision: https://phabricator.services.mozilla.com/D250576